--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>MUSICS</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -192,7 +192,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                   MUSICS
                                 </div>
                             </div>
                         </div>
@@ -207,7 +207,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    MUSICS
                                 </div>
                             </div>
                         </div>
@@ -222,7 +222,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                   MUSICS
                                 </div>
                             </div>
                         </div>
@@ -251,11 +251,11 @@
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
+                    <p>09279867442</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">dobecobidoza@gmail.com</a></p>
                 </div>
             </div>
         </div>
