--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>FREE MUSICS</title>
+    <title>THE CAHINSMOKERS MUSICS</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">THE CHAINSMOKERS</a>
+                <a class="navbar-brand page-scroll" href="#page-top">THE CHAINSMOKERS MUSICS</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -73,7 +73,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">THE CHAINSMOKERS</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>The Chainsmokers are an American DJ duo consisting of Andrew Taggart and Alex Pall. The duo had a top twenty single in several countries with their 2014 song "#Selfie", reaching number sixteen on the US Billboard Hot 100, number three in Australia, and number eleven in the United Kingdom.</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
