--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    MUSICS
                                 </div>
                             </div>
                         </div>
@@ -245,7 +245,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading"></h2>
+                    <h2 class="section-heading">Contact Us!</h2>
                     <hr class="primary">
                     <p>
                 </div>
