--- a/index.html
+++ b/index.html
@@ -245,9 +245,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Contact Us!</h2>
-                    <hr class="primary">
-                    <p>
+                    <h2 class="section-heading">Contact As</h2>
+                   
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
