--- a/index.html
+++ b/index.html
@@ -83,10 +83,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading"></h2>
-                    <hr class="light">
-                    <p class="text-faded"></p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                    
                 </div>
             </div>
         </div>
@@ -245,7 +242,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Contact As</h2>
+                    <h2 class="section-heading">Contact As!</h2>
                    
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
