--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
+                    <a href="closer.jpg" class="portfolio-box">
                         <img src="closer.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Closer
                                 </div>
                                 <div class="project-name">
                                     MUSICS
