--- a/index.html
+++ b/index.html
@@ -151,15 +151,15 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+                    <a href="marsh.jpg" class="portfolio-box">
+                        <img src="marsh.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Marshmello
                                 </div>
                                 <div class="project-name">
-                                    MUSICS
+                                    MUSIC
                                 </div>
                             </div>
                         </div>
@@ -174,7 +174,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    MUSICS
+                                    MUSIC
                                 </div>
                             </div>
                         </div>
@@ -189,7 +189,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                   MUSICS
+                                   MUSIC
                                 </div>
                             </div>
                         </div>
@@ -204,7 +204,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                    MUSICS
+                                    MUSIC
                                 </div>
                             </div>
                         </div>
@@ -219,7 +219,7 @@
                                     Category
                                 </div>
                                 <div class="project-name">
-                                   MUSICS
+                                   MUSIC
                                 </div>
                             </div>
                         </div>
